...
    android:screenOrientation="landscape"
    tools:context=".ui.CollectorAddAlbumActivity">

    <data>

        <variable
            name="viewModel"
            type="com.example.test.viewmodel.CollectorAddAlbumViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
...
                android:text="@={viewModel.errorName}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
...
                android:text="@={viewModel.errorImage}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
...
                android:text="@={viewModel.errorReleaseDate}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:entries="@array/genre" />
...
                android:text="@={viewModel.errorGenre}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/recordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:entries="@array/recordLabel" />
...
                android:text="@={viewModel.errorRecordLabel}"
                android:textAlignment="center"
                android:textColor="#D32F2F"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
...
                    android:text="@string/agregar"
                    android:textColorHighlight="#2196F3"
                    android:textColorLink="#03A9F4"
                     />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:width="30dp"
                    android:backgroundTint="#D32F2F"
                    android:maxWidth="30dp"
                    android:minWidth="30dp"
                    android:text="@string/cancelar"
                    android:textColorHighlight="#F32121"
                    android:textColorLink="#F40303"
                     />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
...
