...
                android:minWidth="200dp"
                android:text="@string/agregar_artista"
                android:textColorHighlight="#2196F3"
                android:textColorLink="#01579B" />

            <Button
                android:id="@+id/btnAddAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:backgroundTint="#01579B"
                android:minWidth="200dp"
                android:text="@string/agregar_lbum"
                android:textColorHighlight="#2196F3"
                android:textColorLink="#01579B" />

            <Button
                android:id="@+id/buttonGetAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:backgroundTint="#01579B"
...
